# Task/controllers/taskController.js
@@ -61,11 +61,13 @@ exports.updateTask = async (req, res) => {
   try {
     const task = await Task.findByIdAndUpdate(req.params.id, req.body, { new: true });
     if (!task) return res.status(404).json({ message: 'Task not found' });
-    res.status(204).json(task);
+
+    res.status(204).send(); 
   } catch (err) {
     handleError(res, 500, 'Error updating task', err);
   }
 };
+
 
 // DELETE a task
 exports.deleteTask = async (req, res) => {
